# typematch

./: .gitignore  .travis.yml  CHANGES.rst  README.rst  setup.cfg  setup.py  tox.ini
tests/: test_typematch.py  test_typematch_generics.py
typematch/: __init__.py
