[metadata]
license_file = LICENSE

[build]
build-base = _build

[bdist_wheel]
universal = 1

[sdist]
formats = gztar

[wheel]
universal = 1

[aliases]
release = check -r -s register sdist bdist_wheel upload

[flake8]
ignore=_
max-line-length = 120
exclude = .git,.tox
application-import-names = typematch
import-order-style = smarkets

[mypy]
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True
